# TODDLERS

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml
cloudy_patches/: README.md  apply_patch.sh  cloudy_unattenuated_diffuse_continuum.patch  cont_createmesh.cpp  cont_setintensity.cpp  iter_startend.cpp  parse_save.cpp  rfield.h  rt_continuum.cpp  save_do.cpp
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/pipeline_workflow/: README.md  hpc_workflow.tex
examples/: 01_density_profiles.py  02_imf_sampling.py  03_run_evolution.py  04_cloudy_pipeline.py  05_stellar_populations.py  06_star_formation_mode.py  07_cloud_structure.py  08_dynamic_density_and_covering.py  09_stochastic_pipeline.py  10_fast_feedback_queries.py  11_bpt_diagram.py  12_custom_population_pipeline.py  13_stochastic_population_pipeline.py  README.md  build_stochastic_database.py
examples/analysis/: plot_bpt_single_run.py
examples/eep_validation/: README.md  eep_config_validation.py  eep_curvature_anchor_test.py  eep_index_alignment.py  eep_phase0_audit.py  eep_reconstruction_plots.py
examples/hpc/: README.md  bpass_chab100_grid.json  evolution_grid.json  make_grid.py  run_campaign_examples.sh  sb99_2023_grid.json  stab_campaign_grid.json
examples/paper_figures/: README.md  generate_all_paper_figures.py  paper_style.mplstyle
examples/paper_figures/data/: BCW_PAH.csv  Belfiore_contour_demarc.csv
examples/paper_figures/grain_comparison/: hii_ism.in  hii_orion.in
examples/stab/: README.md  TODDLERS_recollapse_handling.py  VALIDATION.md  compare_lines.py  compare_plot.py  generate_interpolants.py  generate_sfr_scaled_sed.py  generate_sfr_scaled_sed_paramspace.py  hr_lr_check.py  inspect_lines.py  names_and_constants.py  physics_checks.py  read_stab.py  run_stab_pipeline.sh  toddlers_cloud_family_stab_generator.py
examples/stab/dtm_validation/: README.md  _style.py  compare_vs_reference.py  dtm_interp_test.py  mir_nebular_vs_dust.py  plot_halpha_vs_ionizing.py  plot_lines_vs_dtm.py  plot_nodust_hr_lr_vs_dtm.py  plot_sed_vs_dtm.py
examples/stab/hdf5/: README.md
examples/stab/pts/simulation/: __init__.py
scripts/: download_data.py  regenerate_interp2d.py
src/toddlers/: __init__.py  _interp_compat.py  _paths.py  add_cavity_to_density_profiles.py  cloud_density_profiles.py  cloud_energy_injection.py  cloud_energy_injection_generalized.py  cloudy_abundances_generator.py  cloudy_base_input_generator.py  cloudy_dig_model_generator.py  cloudy_dissolved_model_generator.py  cloudy_grains_generator.py  cloudy_logging.py  cloudy_output_handler.py  cloudy_parallel_manager.py  cloudy_shell_model_generator.py  cloudy_simulation_manager.py  cloudy_stellar_spectra_generator.py  cloudy_timegrid_generator.py  cloudy_unified_model_generator.py  constants.py  database  dissolution.py  dust_evolution.py  evolution.py  evolution_data.py  evolution_logging.py  exceptions.py  fragmentation.py  imports.py  initial_conditions.py  lyman_alpha.py  phase1.py  phase2.py  readme.md  shell_structure.py  stellar_feedback.py  timeout_manager.py  track_simulation.py  utils.py
src/toddlers/database/: pySB99interpolation_example_intermediate_metadata.json  pySB99interpolation_example_lowmass_metadata.json  pySB99interpolation_example_massive_metadata.json  pySB99interpolation_kroupa_100_metadata.json  pySB99interpolation_topheavy_100_metadata.json
src/toddlers/hpc/: README.md  __init__.py  archive_cloudy_output.py  campaign.py  check_status.py  dtm_sweep.py  enumerate_cloudy.py  error_recovery.py  generate_tasks.py  runner.py  verify_dtm.py  worker_loop.py
src/toddlers/hpc/templates/: submit_cloudy.sh  (+1 more)
src/toddlers/interpolants/: generate_interpolants.py  generate_line_profiles.py  readme.md  run_interpolant_generator.py  submit_interpolant.pbs  test_cache.py  test_dissolution_interp.py  test_lines.py  test_sed_interp.py  test_sed_res.py
src/toddlers/pts/: __init__.py
src/toddlers/pysb99/: eep_interpolation.py  generate_pysb99_interpolants.py  pysb99_core.py  pysb99_examples.py  pysb99_plotting.py  pysb99_runner.py  readme.md
src/toddlers/stab/: __init__.py  cloud_family_stab.py  compare.py  config.py  interpolants.py  particles.py  recollapse.py  rename.py  resample.py  sfr_normalized_stab.py  sfr_scaled_seds.py  sfr_scaling.py  stab_io.py
tests/: conftest.py  test_campaign_stab_none.py  test_cloudy_workflow.py  test_constants.py  test_density_profiles.py  test_dtm_label.py  test_dtm_sweep.py  test_dynamics_weaver.py  test_eep.py  test_enumerate_no_fdleak.py  test_evolution_full.py  test_grain_ratio.py  test_hpc.py  test_hpc_integrity.py  test_hpc_stab_rearm.py  test_nH_conversion.py  test_output_root.py  test_sampling.py  test_stab_cache.py  test_stab_dissolution_interp.py  test_stab_dtm_cache_key.py  test_stab_recollapse_h5.py  test_stab_recollapse_sim.py  test_stab_sed_res.py  test_stall_watchdog.py  test_stellar_feedback.py  test_utils.py  test_verify_dtm.py
(+26 files in other folders)
