[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "toddlers"
version = "2.0.0"
description = "TODDLERS (Time evolution of Observables including Dust Diagnostics and Line Emission from Regions containing young Stars): 1D feedback-driven shell dynamics coupled with Cloudy photoionization, predicting time-evolving UV-to-mm observables of star-forming regions."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Anand Utsav Kapoor", email = "anandutsavkapoor@gmail.com" }]
keywords = ["astrophysics", "HII regions", "stellar feedback", "photoionization", "SED"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "matplotlib",
    "pandas",
    "h5py",
    "requests",
    "tqdm",
    "psutil",
    "gdown",
    "zstandard",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "flake8", "black"]
docs = ["sphinx", "sphinx-rtd-theme"]

[project.urls]
Homepage = "https://github.com/anandutsavkapoor/toddlers-public"
Repository = "https://github.com/anandutsavkapoor/toddlers-public"
Documentation = "https://github.com/anandutsavkapoor/toddlers-public#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Ship the committed data so the package works out of the box from a wheel as well
# as an editable install. The single-star feedback database (single_star_tracks.h5)
# and other regenerated products (*.hdf5) are intentionally NOT listed: they are
# rebuilt on first use (see examples/build_stochastic_database.py).
"toddlers" = [
    "pysb99/pySB99_files/**/*",   # pySB99 tracks/spectra/atmosphere inputs (npy + txt/dat)
    "database/*.obj",             # SB99/BPASS/pySB99 feedback interpolants (evolution needs these)
    "database/*_metadata.json",   # feedback-library metadata
    "database/lines_list/*",      # emission-line lists
    "hpc/templates/*.sh",
    "hpc/README.md",
]
# Vendored PTS subset (AGPL-3.0): ship its license and any non-.py data so the
# StoredTable I/O works from a wheel as well as an editable install.
"toddlers.pts" = ["**/*", "LICENSE.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running tests (deselect with -m 'not slow')",
    "cloudy: requires a working Cloudy installation",
    "data: requires the downloaded stellar/atmosphere data",
    "hpc: requires the HPC environment",
]
addopts = "-m 'not slow and not cloudy and not data and not hpc'"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
